--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "mongoose-autopopulate": "^0.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
